feature: added a media query for tablet size screen scaling

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,10 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+ /* TABLET SCALING */
+ @media screen and (max-width:768px) {
+    .container {
+        width: 100%;
+    }
+ }
