feature: added a media query for phone size screen scaling

--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,26 @@ img {
         width: 100%;
     }
  }
+
+ /* PHONE SCALING */
+ @media screen and (max-width:480px) {
+    .row {
+        flex-wrap: wrap;
+    }
+    
+    .lessons .col {
+        width: 100%;
+    }
+
+    .steps .col {
+        width: 100%;
+    }
+    
+    .why-us .col-left {
+        width: 100%;
+    }
+    
+    .why-us .col-right {
+        width: 100%;
+    }
+ }
