--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,18 @@ img {
         width: 100%;
     }
 
+    .steps {
+        margin-bottom: 0;
+    }
+
     .steps .col {
         width: 100%;
+    }
+
+    .why-us {
+        margin: 0;
+        padding: 3rem 0;
+        background-color: #222222;
     }
     
     .why-us .col-left {
